--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -1,62 +1,117 @@
-- form_action = { :controller => "admin/products", :action => "create" }
 - if form_type == "edit"
-  - form_action = { :controller => "admin/products", :action => "update", :id => @product.id }
-
-= form_for @product, :url => form_action do |f|
-  #admin-product-info
-    %table#admin-products-table
-      %tr
-        %td 商品名称：
-        %td= f.text_field :product_name, :size=>40
-      %tr
-        %td 商家名称：
-        %td= f.text_field :shop_name, :size=>40
-      %tr
-        %td 类别：
-        %td= f.text_field :category, :size=>40
-      %tr
-        %td 区域：
-        %td= f.text_field :district, :size=>40
-      %tr
-        %td 区域名称：
-        %td= f.text_field :district_name, :size=>40
-      %tr
-        %td 封面名称：
-        %td= f.text_field :cover_name, :size=>40
-      %tr
-        %td 销售价格：
-        %td= f.text_field :sale_price, :size=>40
-      %tr
-        %td 市场价格：
-        %td= f.text_field :original_price, :size=>40
-      %tr
-        %td 销售数量：
-        %td= f.text_field :sale_count, :size=>40
-      %tr
-        %td 结束时间：
-        %td= f.text_field :overtime_at, :size=>40
-  #admin-product-image
-    %table#admin-products-table
-      %tr
-        %td
-          - image_path = @product.image_path_url(:normal)
-          - if image_path == nil
-            - image_path = "/assets/noimg.gif"
-          = image_tag image_path, :width => "440", :height => "267"
-      %tr
-        %td
-          上传图片：
-          = f.file_field :image_path
-  #admin-product-detail
-    %table#admin-products-table
-      %tr
-        %td 详细内容：
-        %td
-          = javascript_include_tag "ckeditor/init"
-          = f.cktext_area :content
-      %tr
-        %td
-        %td#admin-products-table-submit
-          = f.submit "提交"
-          = f.submit "预览", :name => "preview"
+  = form_for @product, :url => admin_product_path(@product), :method => :put do |f|
+    #admin-product-info
+      %table#admin-products-table
+        %tr
+          %td 商品名称：
+          %td= f.text_field :product_name, :size=>40
+        %tr
+          %td 商家名称：
+          %td= f.text_field :shop_name, :size=>40
+        %tr
+          %td 类别：
+          %td= f.text_field :category, :size=>40
+        %tr
+          %td 区域：
+          %td= f.text_field :district, :size=>40
+        %tr
+          %td 区域名称：
+          %td= f.text_field :district_name, :size=>40
+        %tr
+          %td 封面名称：
+          %td= f.text_field :cover_name, :size=>40
+        %tr
+          %td 销售价格：
+          %td= f.text_field :sale_price, :size=>40
+        %tr
+          %td 市场价格：
+          %td= f.text_field :original_price, :size=>40
+        %tr
+          %td 销售数量：
+          %td= f.text_field :sale_count, :size=>40
+        %tr
+          %td 结束时间：
+          %td= f.text_field :overtime_at, :size=>40
+    #admin-product-image
+      %table#admin-products-table
+        %tr
+          %td
+            - image_path = @product.image_path_url(:normal)
+            - if image_path == nil
+              - image_path = "/assets/noimg.gif"
+            = image_tag image_path, :width => "440", :height => "267"
+        %tr
+          %td
+            上传图片：
+            = f.file_field :image_path
+    #admin-product-detail
+      %table#admin-products-table
+        %tr
+          %td 详细内容：
+          %td
+            = javascript_include_tag "ckeditor/init"
+            = f.cktext_area :content
+        %tr
+          %td
+          %td#admin-products-table-submit
+            = f.submit "提交"
+            = f.submit "预览", :name => "preview"
+- else
+  = form_for @product, :url => admin_products_path, :method => :post do |f|
+    #admin-product-info
+      %table#admin-products-table
+        %tr
+          %td 商品名称：
+          %td= f.text_field :product_name, :size=>40
+        %tr
+          %td 商家名称：
+          %td= f.text_field :shop_name, :size=>40
+        %tr
+          %td 类别：
+          %td= f.text_field :category, :size=>40
+        %tr
+          %td 区域：
+          %td= f.text_field :district, :size=>40
+        %tr
+          %td 区域名称：
+          %td= f.text_field :district_name, :size=>40
+        %tr
+          %td 封面名称：
+          %td= f.text_field :cover_name, :size=>40
+        %tr
+          %td 销售价格：
+          %td= f.text_field :sale_price, :size=>40
+        %tr
+          %td 市场价格：
+          %td= f.text_field :original_price, :size=>40
+        %tr
+          %td 销售数量：
+          %td= f.text_field :sale_count, :size=>40
+        %tr
+          %td 结束时间：
+          %td= f.text_field :overtime_at, :size=>40
+    #admin-product-image
+      %table#admin-products-table
+        %tr
+          %td
+            - image_path = @product.image_path_url(:normal)
+            - if image_path == nil
+              - image_path = "/assets/noimg.gif"
+            = image_tag image_path, :width => "440", :height => "267"
+        %tr
+          %td
+            上传图片：
+            = f.file_field :image_path
+    #admin-product-detail
+      %table#admin-products-table
+        %tr
+          %td 详细内容：
+          %td
+            = javascript_include_tag "ckeditor/init"
+            = f.cktext_area :content
+        %tr
+          %td
+          %td#admin-products-table-submit
+            = f.submit "提交"
+            = f.submit "预览", :name => "preview"
 
