--- a/app/views/admin/products/new.html.haml
+++ b/app/views/admin/products/new.html.haml
@@ -7,9 +7,9 @@
           %h2 新增商品
           %uj.filter
             %li
-              = link_to "全部商品", { :controller => "admin/products", :action => "index" }
+              = link_to "全部商品", admin_products_path
             %li.current
-              = link_to "新增商品", { :controller => "admin/products", :action => "new" }
+              = link_to "新增商品", new_admin_product_path
           -# 添加view内容
           = render :partial => "form", :locals => { :form_type => "new"}
 
