--- a/app/views/admin/products/_dashboard.html.haml
+++ b/app/views/admin/products/_dashboard.html.haml
@@ -1,56 +1,26 @@
 .dashboard
   %ul
-    - if dashboard_select == "products"
-      %li.current
-        = link_to "商品管理", admin_products_path
-        %span
-    - else
-      %li
-        = link_to "商品管理", admin_products_path
-        %span
+    %li{:class => dashboard_select_products(dashboard_select)}
+      = link_to "商品管理", admin_products_path
+      %span
 
-    - if dashboard_select == "shops"
-      %li.current
-        = link_to "商家管理", admin_products_path
-        %span
-    - else
-      %li
-        = link_to "商家管理", admin_products_path
-        %span
+    %li{:class => dashboard_select_shops(dashboard_select)}
+      = link_to "商家管理", admin_products_path
+      %span
 
-    - if dashboard_select == "users"
-      %li.current
-        = link_to "用户管理", admin_products_path
-        %span
-    - else
-      %li
-        = link_to "用户管理", admin_products_path
-        %span
+    %li{:class => dashboard_select_users(dashboard_select)}
+      = link_to "用户管理", admin_products_path
+      %span
 
-    - if dashboard_select == "orders"
-      %li.current
-        = link_to "订单管理", admin_products_path
-        %span
-    - else
-      %li
-        = link_to "订单管理", admin_products_path
-        %span
+    %li{:class => dashboard_select_orders(dashboard_select)}
+      = link_to "订单管理", admin_products_path
+      %span
 
-    - if dashboard_select == "categorys"
-      %li.current
-        = link_to "分类管理", admin_products_path
-        %span
-    - else
-      %li
-        = link_to "分类管理", admin_products_path
-        %span
+    %li{:class => dashboard_select_categorys(dashboard_select)}
+      = link_to "分类管理", admin_products_path
+      %span
 
-    - if dashboard_select == "districts"
-      %li.current
-        = link_to "区域管理", admin_products_path
-        %span
-    - else
-      %li
-        = link_to "区域管理", admin_products_path
-        %span
+    %li{:class => dashboard_select_districts(dashboard_select)}
+      = link_to "区域管理", admin_products_path
+      %span
 
