--- a/app/views/admin/products/index.html.haml
+++ b/app/views/admin/products/index.html.haml
@@ -29,7 +29,7 @@
                 %td= product.id
                 %td= product.cover_name
                 %td= product.shop_name
-                %td= product.category
+                %td= product.category.cn_name
                 %td= product.district
                 %td= product.sale_price
                 %td= product.original_price
