--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -53,7 +53,9 @@
                 %li.login= link_to "登录", "/login"
                 %li.login.last= link_to "注册", "/signup"
 
-      = yield
+      #bdw
+        #bd.cf
+          = yield
 
       #ftw
         #ft
