--- a/app/views/admin/products/edit.html.haml
+++ b/app/views/admin/products/edit.html.haml
@@ -1,6 +1,6 @@
 #content.coupons-box
   #content-admin
-    = render :partial => "dashboard", :locals => {:dashboard_select => "products"}
+    = render "dashboard"
     .mainbox.mine
       %h2 编辑商品
       %uj.filter
