--- a/app/views/admin/products/edit.html.haml
+++ b/app/views/admin/products/edit.html.haml
@@ -1,14 +1,8 @@
 #content.coupons-box
   #content-admin
-    = render "dashboard"
+    = render "admin/shared/dashboard"
     .mainbox.mine
-      %h2 编辑商品
-      %uj.filter
-        %li
-          = link_to "全部商品", admin_products_path
-        %li
-          = link_to "新增商品", new_admin_product_path
-      -# 添加view内容
+      = render "subbar"
       = render :partial => "form", :locals => { :form_type => "edit"}
 
 #sidebar
