--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,48 +10,7 @@
     #doc
       #hdw
         #hd
-          #site-top.cf
-            %h1= link_to image_tag("/assets/logo.png", :width=>"108", :height=>"66", :title=>"每天团购一次", :alt=>"每天团购一次"), "/"
-            .site-info
-              %ul
-                %li= link_to "邮件订阅", "/subscribe", {:class=>"subscribe"}
-                %li= link_to "加入收藏夹", "javascript:void(0);", {:class=>"fav", :id=>"favorite"}
-                %li= link_to "下载手机版", "/mobile", {:class=>"mobile", :target=>"_blank"}
-                %li= link_to "邀请好友", "/referrals", {:class=>"refer", :target=>"_blank"}
-                %li= link_to "常见问题", "/faq", {:class=>"last"}
-            .search.cf
-              %form#yui_3_5_1_1_1350142560308_13{:action=>"/s/", :name=>"searchForm", :method=>"get"}
-                %input.s-text{:name=>"w", :autocomplete=>"off", :placeholder=>"请输入商品名称、地址等", :type=>"text"}
-                %input.s-submit{:hidefocus=>"true", :value=>"搜索", :type=>"submit"}
-          .site-nav
-            .nav-wrapper.cf
-              %ul.nav
-                %li= link_to "今日团购", "/", {:class=>"hover"}
-                %li= link_to "美食", "/meishi/all"
-                %li= link_to "娱乐", "/yule/all"
-                %li= link_to "电影", "/dianying/all"
-                %li= link_to "生活", "/shenghuo/all"
-                %li= link_to "酒店旅游", "/lvyou/all"
-                %li= link_to "手机版", "/mobile"
-              %ul.user-info
-                %li.account
-                  = link_to "我的信息", "/orders", {:class=>"my-account"}
-                  %i.tri
-                  #yui_3_5_1_1_1350142560308_21.account-menu{:style=>"display:none"}
-                    %ul.comment-info
-                      %li= link_to "未使用", "/orders/list/unused", {:class=>"first"}
-                      %li= link_to "待付款", "/orders/list/unpaid"
-                      %li= link_to "待评价", "/rates"
-                      %li= link_to "我的收藏", "/collections"
-                      %li.space
-                    %ul.base-info
-                      %li= link_to "我的订单", "/orders/", {:class=>"first"}
-                      %li= link_to "账户余额", "/account/credit"
-                      %li= link_to "余额充值", "/account/charge"
-                      %li= link_to "积分/邀请", "/account/points"
-                      %li= link_to "账户设置", "/account/settings", {:class=>"last"}
-                %li.login= link_to "登录", "/login"
-                %li.login.last= link_to "注册", "/signup"
+          = render "layouts/header"
 
       #bdw
         #bd.cf
@@ -59,53 +18,5 @@
 
       #ftw
         #ft
-          .ftbox
-            %h3 用户帮助
-            %ul
-              %li= link_to "常见问题", "/help/faq"
-              %li= link_to "求购转让", "/deal/exchanges/default"
-              %li= link_to "往期北京团购", "/deals"
-              %li= link_to "邮箱白名单设置", "/help/email"
-              %li= link_to "开放API", "/help/api"
-              %li= link_to "反诈骗公告", "/about/anticheat"
-          .ftbox
-            %h3 获取更新
-            %ul
-              %li= link_to "邮件订阅", "/maillist/subscribe"
-              %li= link_to "iPhone/Android", "/mobile/"
-              %li= link_to "QQ空间", "http://user.qzone.qq.com/97231705", {:rel=>"nofollow", :target=>"_blank"}
-              %li= link_to "新浪微博", "http://t.sina.com.cn/scige", {:rel=>"nofollow", :target=>"_blank"}
-              %li= link_to "腾讯微博", "http://t.qq.com/sciget", {:rel=>"nofollow", :target=>"_blank"}
-              %li= link_to "RSS订阅", "/feed/beijing", {:target=>"_blank"}
-          .ftbox
-            %h3 商务合作
-            %ul
-              %li= link_to "提供团购信息", "/feedback/seller"
-              %li= link_to "市场合作", "/about#contact"
-              %li= link_to "商家联盟", "/", :target=>"_blank"
-              %li= link_to "版权声明", "/about/copyright"
-              %li= link_to "管理后台", admin_products_path
-          .ftbox
-            %h3 公司信息
-            %ul
-              %li= link_to "关于我们", "/about/"
-              %li= link_to "我们承诺", "/commitment/"
-              %li= link_to "媒体报道", "/about/press"
-              %li= link_to "加入我们", "/about/job"
-              %li= link_to "隐私声明", "/about/privacy"
-          .ftbox.service
-            %i.hotline
-            %p.desc 客服电话(免长途费)
-            %p.num 400-660-5500
-            %p.time 周一到周日8:00-22:00
-          #yui_3_5_1_1_1350142560308_56.copyright
-            %p
-              ©
-              %span{:title=>"I:3; Q:7; S:4; C:36; F:0; T:173.32; H:e18"} 2012
-              startup.com
-              = link_to "京ICP证100001号", "http://www.miibeian.gov.cn/", {:target=>"_blank"}
-              京公网安备100000000001号
-          %div{:style=>"display:none"}
-            %script{:src=>"http://s23.cnzz.com/stat.php?id=4669675&web_id=4669675&show=pic", :language=>"JavaScript"}
-          %ul.cert.cf
+          = render "layouts/footer"
 
