--- a/app/views/admin/products/index.html.haml
+++ b/app/views/admin/products/index.html.haml
@@ -8,7 +8,7 @@
           %th{:width=>"auto"} 编号
           %th{:width=>"60"} 封面名称
           %th{:width=>"60"} 商家名称
-          %th{:width=>"60"} 类别
+          %th{:width=>"60"} 分类
           %th{:width=>"60"} 区域
           %th{:width=>"60"} 销售价格
           %th{:width=>"60"} 市场价格
