--- a/app/views/admin/products/new.html.haml
+++ b/app/views/admin/products/new.html.haml
@@ -3,7 +3,7 @@
     = render "admin/shared/dashboard"
     .mainbox.mine
       = render "subbar"
-      = render :partial => "form", :locals => { :form_type => "new"}
+      = render "form"
 
 #sidebar
 
