--- a/app/views/admin/shared/_dashboard.html.haml
+++ b/app/views/admin/shared/_dashboard.html.haml
@@ -17,7 +17,7 @@
       %span
 
     %li{:class => (controller_name == "categories" ? "current" : nil)}
-      = link_to "分类管理", admin_products_path
+      = link_to "分类管理", admin_categories_path
       %span
 
     %li{:class => (controller_name == "districts" ? "current" : nil)}
