add category select box

--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -9,7 +9,7 @@
         %td= f.text_field :shop_name, :size=>40
       %tr
         %td 分类：
-        %td= f.text_field :category, :value => @product.category.cn_name, :size=>40
+        %td= f.select :category, @categories.map{|c| [c.cn_name, c.id]}, :selected => (@product.category==nil ? nil : @product.category.id)
       %tr
         %td 区域：
         %td= f.text_field :district, :size=>40
