--- a/app/views/admin/products/index.html.haml
+++ b/app/views/admin/products/index.html.haml
@@ -22,7 +22,7 @@
             %td= product.cover_name
             %td= product.shop_name
             %td= product.category.cn_name
-            %td= product.district
+            %td= product.district.cn_name
             %td= product.sale_price
             %td= product.original_price
             %td= product.sale_count
