--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -12,7 +12,7 @@
   金源福城肥牛2-3人套餐
 #content
   #deal-intro.cf
-    %h1.deal-brand= "【#{@product.district_name}】#{@product.shop_name}"
+    %h1.deal-brand= "【#{@product.district.cn_name}】#{@product.shop_name}"
     %h2.deal-title= @product.product_name
     .main
       .deal-buy.deal-price-tag-open
