--- a/app/views/products/_index.html.haml
+++ b/app/views/products/_index.html.haml
@@ -3,7 +3,7 @@
     %div{:class => cycle("item", "item odd")}
       .cover
         = link_to image_tag( product.image_path_url(:thumb), :width => "312", :height => "189", :title => "点击查看详情", :alt => product.cover_name ), product_path(product), { :target => "_blank" }
-      %h3= link_to "【#{product.district_name}】#{product.cover_name}", product_path(product), { :target => "_blank" }
+      %h3= link_to "【#{product.district.cn_name}】#{product.cover_name}", product_path(product), { :target => "_blank" }
       %p.detail
         = link_to "去看看", product_path(product),
                   { :target => "_blank",
