--- a/app/views/filters/_filter.html.haml
+++ b/app/views/filters/_filter.html.haml
@@ -2,27 +2,19 @@
   .filter-section.type
     %span.label 分类：
     %ul
-      %li{:class => (controller_name != "categories" ? "current" : nil)}
+      %li{:class => (action_name != "today" && action_name != "category" ? "current" : nil)}
         = link_to "全部", "/"
       %li{:class => (action_name == "today" ? "current" : nil)}
-        %a{:href => today_filters_path}
-          今日新单
-          %span>= "(#{@products.size})"
+        = link_to "今日新单<span>(#{@products.size})</span>".html_safe,today_filters_path
       - @categories.each do |category|
-        %li{:class => (controller_name == "categories" && params[:id].to_i == category.id ? "current" : nil)}
-          / 怎样能用link_to?
-          /= link_to "", category_path(category)
-          %a{:href => category_filters_path(category)}
-            = category.cn_name
-            %span>= "(#{category.products.size})"
+        %li{:class => (action_name == "category" && params[:id].to_i == category.id ? "current" : nil)}
+          = link_to "#{category.cn_name}<span>(#{category.products.size})</span>".html_safe, category_filter_path(category)
   .filter-section
     %span.label 区域：
     %ul
-      %li{:class => (controller_name != "districts" ? "current" : nil)}
+      %li{:class => (action_name != "district" ? "current" : nil)}
         = link_to "全部", "/"
       - @districts.each do |district|
-        %li{:class => (controller_name == "districts" && params[:id].to_i == district.id ? "current" : nil)}
-          %a{:href => district_filters_path(district)}
-            = district.cn_name
-            %span>= "(#{district.products.size})"
+        %li{:class => (action_name == "district" && params[:id].to_i == district.id ? "current" : nil)}
+          = link_to "#{district.cn_name}<span>(#{district.products.size})</span>".html_safe, district_filter_path(district)
 
