finish bread feature

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -14,7 +14,7 @@
 .site-nav
   .nav-wrapper.cf
     %ul.nav
-      %li= link_to "今日团购", "/", {:class=>"hover"}
+      %li= link_to "今日优惠", "/", {:class=>"hover"}
       %li= link_to "美食", "/meishi/all"
       %li= link_to "娱乐", "/yule/all"
       %li= link_to "电影", "/dianying/all"
