add login and signup feature, but haven't finish

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -7,10 +7,10 @@
         = f.text_field :name, :class=>"f-text"
       .field-group
         = f.label :password, "创建密码"
-        = f.text_field :password, :class=>"f-text"
+        = f.password_field :password, :class=>"f-text"
       .field-group
         = f.label :password, "确认密码"
-        = f.text_field :password, :class=>"f-text"
+        = f.password_field :password, :class=>"f-text"
       .field-group
         = f.label :email, "邮箱"
         = f.text_field :email, :class=>"f-text"
