--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,7 +8,7 @@
       %li= link_to "邀请好友", "/referrals", {:class=>"refer", :target=>"_blank"}
       %li= link_to "常见问题", "/faq", {:class=>"last"}
   .search.cf
-    %form#yui_3_5_1_1_1350142560308_13{:action=>"/s/", :name=>"searchForm", :method=>"get"}
+    %form{:action=>"/s/", :name=>"searchForm", :method=>"get"}
       %input.s-text{:name=>"w", :autocomplete=>"off", :placeholder=>"请输入商品名称、地址等", :type=>"text"}
       %input.s-submit{:hidefocus=>"true", :value=>"搜索", :type=>"submit"}
 .site-nav
@@ -22,10 +22,12 @@
       %li= link_to "酒店旅游", "/lvyou/all"
       %li= link_to "手机版", "/mobile"
     %ul.user-info
+      - if logined?
+        %li.name= "欢迎您，#{current_user.name}"
       %li.account
         = link_to "我的信息", "/orders", {:class=>"my-account"}
         %i.tri
-        #yui_3_5_1_1_1350142560308_21.account-menu{:style=>"display:none"}
+        .account-menu{:style=>"display:none"}
           %ul.comment-info
             %li= link_to "未使用", "/orders/list/unused", {:class=>"first"}
             %li= link_to "待付款", "/orders/list/unpaid"
@@ -38,6 +40,9 @@
             %li= link_to "余额充值", "/account/charge"
             %li= link_to "积分/邀请", "/account/points"
             %li= link_to "账户设置", "/account/settings", {:class=>"last"}
-      %li.login= link_to "登录", login_path
-      %li.login.last= link_to "注册", signup_path
+      - if logined?
+        %li.login= link_to "退出", logout_path, :method => :delete
+      - else
+        %li.login= link_to "登录", login_path
+        %li.login.last= link_to "注册", signup_path
 
