--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -9,8 +9,8 @@
         = f.label :password, "创建密码"
         = f.password_field :password, :class=>"f-text"
       .field-group
-        = f.label :password, "确认密码"
-        = f.password_field :password, :class=>"f-text"
+        = f.label :password_confirmation, "确认密码"
+        = f.password_field :password_confirmation, :class=>"f-text"
       .field-group
         = f.label :email, "邮箱"
         = f.text_field :email, :class=>"f-text"
