--- a/app/views/admin/categories/_subbar.html.haml
+++ b/app/views/admin/categories/_subbar.html.haml
@@ -4,11 +4,13 @@
     全部分类
   - when "new"
     新增分类
+  - when "create"
+    新增分类
   - when "edit"
     编辑分类
 %uj.filter
   %li{:class => (action_name == "index" ? "current" : nil)}
     = link_to "全部分类", admin_categories_path
-  %li{:class => (action_name == "new" ? "current" : nil)}
+  %li{:class => (action_name == "new" or action_name == "create" ? "current" : nil)}
     = link_to "新增分类", new_admin_category_path
 
