--- a/app/views/admin/products/_subbar.html.haml
+++ b/app/views/admin/products/_subbar.html.haml
@@ -4,11 +4,13 @@
     全部商品
   - when "new"
     新增商品
+  - when "create"
+    新增商品
   - when "edit"
     编辑商品
 %uj.filter
   %li{:class => (action_name == "index" ? "current" : nil)}
     = link_to "全部商品", admin_products_path
-  %li{:class => (action_name == "new" ? "current" : nil)}
+  %li{:class => (action_name == "new" or action_name == "create" ? "current" : nil)}
     = link_to "新增商品", new_admin_product_path
 
