--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -25,7 +25,7 @@
       - if logined?
         %li.name= "欢迎您，#{current_user.name}"
       %li.account
-        = link_to "我的信息", "/orders", {:class=>"my-account"}
+        = link_to "我的信息", account_path, {:class=>"my-account"}
         %i.tri
         .account-menu{:style=>"display:none"}
           %ul.comment-info
