--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,20 +1,21 @@
-= render "error_messages"
-#content
-  .mainbox
-    %h2 注册
-    = form_for @user do |f|
+#content.coupons-box
+  = render "shared/dashboard"
+  .mainbox.mine
+    = render "subbar"
+    = form_for current_user do |f|
       .field-group
         = f.label :name, "用户名"
         = f.text_field :name, :class=>"f-text"
       .field-group
-        = f.label :password, "创建密码"
+        = f.label :email, "邮箱"
+        = f.text_field :email, :class=>"f-text"
+      .field-group
+        = f.label :password, "密码"
         = f.password_field :password, :class=>"f-text"
       .field-group
         = f.label :password_confirmation, "确认密码"
         = f.password_field :password_confirmation, :class=>"f-text"
       .field-group
-        = f.label :email, "邮箱"
-        = f.text_field :email, :class=>"f-text"
-      .field-group
-        = f.submit "注册", :class=>"form-button"
+        = f.submit "更新信息", :class=>"form-button"
+#sidebar
 
