--- a/app/views/users/_subbar.html.haml
+++ b/app/views/users/_subbar.html.haml
@@ -8,7 +8,7 @@
     修改个人信息
 %uj.filter
   %li{:class => (action_name == "show" ? "current" : nil)}
-    = link_to "查看个人信息", user_path(current_user)
-  %li{:class => (action_name == "edit" or action_name == "update" ? "current" : nil)}
-    = link_to "修改个人信息", edit_user_path(current_user)
+    = link_to "查看个人信息", user_path(@user)
+  %li{:class => ((action_name == "edit" or action_name == "update") ? "current" : nil)}
+    = link_to "修改个人信息", edit_user_path(@user)
 
