add admin::users feature finish

--- a/app/views/admin/shared/_dashboard.html.haml
+++ b/app/views/admin/shared/_dashboard.html.haml
@@ -9,7 +9,7 @@
       %span
 
     %li{:class => (controller_name == "users" ? "current" : nil)}
-      = link_to "用户管理", admin_products_path
+      = link_to "用户管理", admin_users_path
       %span
 
     %li{:class => (controller_name == "orders" ? "current" : nil)}
