--- a/app/views/admin/categories/_subbar.html.haml
+++ b/app/views/admin/categories/_subbar.html.haml
@@ -8,6 +8,8 @@
     新增分类
   - when "edit"
     编辑分类
+  - when "update"
+    编辑分类
 %uj.filter
   %li{:class => (action_name == "index" ? "current" : nil)}
     = link_to "全部分类", admin_categories_path
