--- a/app/views/admin/products/_subbar.html.haml
+++ b/app/views/admin/products/_subbar.html.haml
@@ -8,6 +8,8 @@
     新增商品
   - when "edit"
     编辑商品
+  - when "update"
+    编辑商品
 %uj.filter
   %li{:class => (action_name == "index" ? "current" : nil)}
     = link_to "全部商品", admin_products_path
