finish model validate

--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -9,10 +9,10 @@
         %td= f.text_field :shop_name, :size=>40
       %tr
         %td 分类：
-        %td= f.select :category, @categories.map{|c| [c.cn_name, c.id]}, :selected => (@product.category==nil ? nil : @product.category.id)
+        %td= f.select :category_id, @categories.map{|c| [c.cn_name, c.id]}, :selected => (@product.category==nil ? nil : @product.category.id)
       %tr
         %td 区域：
-        %td= f.select :district, @districts.map{|c| [c.cn_name, c.id]}, :selected => (@product.district==nil ? nil : @product.district.id)
+        %td= f.select :district_id, @districts.map{|c| [c.cn_name, c.id]}, :selected => (@product.district==nil ? nil : @product.district.id)
       %tr
         %td 封面名称：
         %td= f.text_field :cover_name, :size=>40
