--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,48 +2,36 @@
   %h3 用户帮助
   %ul
     %li= link_to "常见问题", "/help/faq"
-    %li= link_to "求购转让", "/deal/exchanges/default"
-    %li= link_to "往期北京团购", "/deals"
-    %li= link_to "邮箱白名单设置", "/help/email"
-    %li= link_to "开放API", "/help/api"
     %li= link_to "反诈骗公告", "/about/anticheat"
 .ftbox
   %h3 获取更新
   %ul
     %li= link_to "邮件订阅", "/maillist/subscribe"
-    %li= link_to "iPhone/Android", "/mobile/"
-    %li= link_to "QQ空间", "http://user.qzone.qq.com/97231705", {:rel=>"nofollow", :target=>"_blank"}
     %li= link_to "新浪微博", "http://t.sina.com.cn/scige", {:rel=>"nofollow", :target=>"_blank"}
     %li= link_to "腾讯微博", "http://t.qq.com/sciget", {:rel=>"nofollow", :target=>"_blank"}
-    %li= link_to "RSS订阅", "/feed/beijing", {:target=>"_blank"}
 .ftbox
   %h3 商务合作
   %ul
-    %li= link_to "提供团购信息", "/feedback/seller"
+    %li= link_to "提供优惠信息", "/feedback/seller"
     %li= link_to "市场合作", "/about#contact"
-    %li= link_to "商家联盟", "/", :target=>"_blank"
-    %li= link_to "版权声明", "/about/copyright"
     %li= link_to "管理后台", admin_products_path
 .ftbox
   %h3 公司信息
   %ul
     %li= link_to "关于我们", "/about/"
     %li= link_to "我们承诺", "/commitment/"
-    %li= link_to "媒体报道", "/about/press"
     %li= link_to "加入我们", "/about/job"
-    %li= link_to "隐私声明", "/about/privacy"
 .ftbox.service
   %i.hotline
   %p.desc 客服电话(免长途费)
   %p.num 400-660-5500
   %p.time 周一到周日8:00-22:00
-#yui_3_5_1_1_1350142560308_56.copyright
+.copyright
   %p
     ©
     %span{:title=>"I:3; Q:7; S:4; C:36; F:0; T:173.32; H:e18"} 2012
     startup.com
-    = link_to "京ICP证100001号", "http://www.miibeian.gov.cn/", {:target=>"_blank"}
-    京公网安备100000000001号
+    京ICP证100001号 京公网安备100000000001号
 %div{:style=>"display:none"}
   %script{:src=>"http://s23.cnzz.com/stat.php?id=4669675&web_id=4669675&show=pic", :language=>"JavaScript"}
 %ul.cert.cf
