--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -8,82 +8,66 @@
   = @product.shop_name
 #content
   #deal-intro.cf
-    %h1.deal-brand= "【#{@product.district.cn_name}】#{@product.shop_name}"
-    %h2.deal-title= @product.product_name
-    .main
-      .deal-buy.deal-price-tag-open
-        %strong= "¥ #{integer_of_value @product.sale_price}"
-        = link_to "抢购", "/deal/buy/720541", {:rel=>"nofollow"}
-      .deal-info
-        %table.deal-discount
-          %tbody
-            %tr
-              %th 价值
-              %th 折扣
-              %th 节省
-            %tr
-              %td
-                %del
-                  %span= "¥#{integer_of_value @product.original_price}"
-              %td= "#{discount}折"
-              %td= "¥#{integer_of_value save_price}"
-        .deal-status
-          %p.deal-status-count
-            %strong= @product.sale_count
-            人已购买
-          %p.deal-status-time-left.deal-on
-            剩余
-            %span>
-              %strong> 3
-              天以上
-        %p 拉长测试
-        %p 拉长测试
-        %p 拉长测试
-        %p 拉长测试
-        %p 拉长测试
-        %p 拉长测试
-        %p 拉长测试
-    .side
-      .deal-buy-cover-img
-        = image_tag @product.image_path_url(:normal)
-  #deal-stuff
-    .mainbox.cf
-      .main
-        %h2 本单详情
-        .blk.detail
-          :css
-            .standard-table { background-color:#c0dcf3; width:100%; border:0; border-collapse:separate; border-spacing:1px; table-layout:fixed; margin-top:5px; }
-            .standard-table .center { text-align:center; }
-            .standard-table .right { text-align:right; }
-            .standard-table th { padding:3px 5px; background-color:#d2e8f9; color:#333; }
-            .standard-table td { padding:3px 5px; word-break:break-all; word-wrap:break-word; }
-            .standard-table tr.comment { background-color:#edf6fd; color:#666; font-weight:bold; }
-            .standard-table tr.normal { background-color:#fff; color:#666; }
-          :css
-            .standard-center { text-align:center; }
-            .standard-bar { padding:3px 6px; color:#fff; border-radius:3px; font-weight:bold; }
-            .standard-list-title { margin:5px 0; }
-            .standard-image { display:block; margin:10px auto; }
-            .standard-image-wrap { display:block; width:100%; }
-          /= markdown @product.content
-          = @product.content.html_safe
-      .side
-      .deal-buy-bottom
-        %span.price.num= "¥#{integer_of_value @product.sale_price}"
-        = link_to "抢购", "/deal/buy/720541", {:rel=>"nofollow", :hidefocus=>"true"}
-        %ul.cf
-          %li
-            价值
-            %br
-            %del.num
-              %span= "¥#{integer_of_value @product.original_price}"
-          %li
-            折扣
-            %br
-            %span.num= "#{discount}折"
-          %li
-            已购买
-            %br
-            %span.num= "#{@product.sale_count}人"
-#sidebar
+    .clearfix.discountDetailsWrap
+      .floatLeft
+        .discountContentWrap#discountContent
+          .globalTitle
+            %h1.title 上岛咖啡，单点消费享全场9折
+            .subTitle
+              %span.gray3.paddingLeft60 发布者：q88637152
+          .discountInfoWrap.clearfix
+            .discountInfoLSide.floatLeft
+              %ul.infoImgSilde
+                %li
+                  %a{:href=>"#"}
+                    %img.img{:src=>"/assets/coffee.jpg", :height=>"195", :width=>"260"}
+            .discountInfoRSide.floatLeft
+              %ul
+                %li.listCol
+                  %label.floatLeft 打折时间：
+                  .floatLeft.fRSide
+                    %span#discount_time 2012年11月17日至2013年01月13日 
+                %li.listCol.clearfix
+                  %label.floatLeft 折扣范围：
+                  .floatLeft.fRSide
+                    %span.discountNum 9.0
+                    折
+                %li.listCol.clearfix
+                  %label.floatLeft 地&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;址：
+                  .floatLeft.fRSide
+                    %span#discount_addr 北京市海淀区中关村南大街12号东方天作商城1楼北区
+                %li.listCol.clearfix
+                  %label.floatLeft 电&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;话：
+                  .floatLeft.fRSide
+                    %span#discount_phone 82101245
+                %li.listCol.clearfix
+                  %label.floatLeft 用户印象：
+                  .floatLeft.fRSide
+                    %span#rate 暂无
+                %li.listCol.clearfix
+                  %a{:href=>"#"}
+                    %img.img{:src=>"/assets/shop_now_c.jpg", :height=>"44", :width=>"130"}
+        .discountDetailsInfo
+          %h2.title 详细信息
+          %p &nbsp;&nbsp;&nbsp;&nbsp;上岛咖啡单点消费享全场9折，农科院内的天作国际商城首层北区，店营业伊始，店内隆重而温馨。各款饮食出品，可口美味，物有超值。相信您能尽兴而来，满意而归。相聚于典雅与温馨之间，端坐在于豪华之堂，品味到卡布基诺咖啡的纯香，观摩着后现代画家的艺术精品与杰作，融合在这人生的超佳境界，您能体会到不一样的上岛咖啡和不一样的精致文化的人生，您将会流连忘返。
+          %p &nbsp;&nbsp;&nbsp;&nbsp;电话：82101245
+          %p &nbsp;&nbsp;&nbsp;&nbsp;地址：北京市海淀区中关村南大街12号东方天作商城1楼北区
 
+#sidebar
+  .side-single
+    #mapbox
+    = javascript_include_tag "http://api.map.baidu.com/api?v=1.3"
+    :javascript
+      var map = new BMap.Map("mapbox");
+      var point = new BMap.Point(126.507328, 43.825834);
+
+      var marker1 = new BMap.Marker(new BMap.Point(126.507328, 43.825834));
+      map.addOverlay(marker1);
+
+      var infoWindow1 = new BMap.InfoWindow("利群超市");
+      marker1.addEventListener("click", function(){this.openInfoWindow(infoWindow1);});
+
+      map.centerAndZoom(point,15);
+      map.enableScrollWheelZoom();
+    #maplink
+      查看大图
